# fp4-trainkit

./: README.md  pyproject.toml  setup.py
examples/: fp32_train_ViTOneBlock_mnist.py  fp32_train_tinyvit_mnist.py  fp4_train_ViTOneBlock_mnist.py  run_early_results.sh  tetrajet_mxfp4_train_ViTOneBlock_mnist.py  tetrajet_mxfp4_train_tinyvit_mnist.py
examples/models/: transformer_block.py  vit.py
fp4tk/: linear.py  quantizer.py  recipe.py  utils.py
fp4tk/quantizer/: __init__.py  mxfp4.py
impl/: fp4_linear.py  fp4_matmul.py  fp4_quantizer.py  recipe.py  simulate_mxfp4.py  tetrajet_linear.py
src/fp4tk/: __init__.py  linear.py  matmul.py  recipe.py  utils.py
src/fp4tk/quantizer/: __init__.py  mxfp4.py  nvfp4.py  registry.py
tests/: test_mxfp4_simulator.py  test_simulate_mxfp4.py  test_tetrajetlinear.py
